--- a/style.css
+++ b/style.css
@@ -1341,6 +1341,10 @@ nav.woocommerce-MyAccount-navigation ul li a:hover {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
