--- a/tailwind.css
+++ b/tailwind.css
@@ -55,10 +55,10 @@ svg.light-svg{
 }
 /*wp-block-columns*/
 .wp-block-columns{
-    @apply dark:bg-gray-700;
+    @apply dark:bg-black;
 }
 body{
-    @apply dark:bg-gray-700;
+    @apply dark:bg-black;
 }
 /*wp blockquote*/
 .wp-block-quote{
@@ -81,60 +81,6 @@ cite{
 .wp-block-quote cite:before{
     content:"~ ";
     @apply text-blue-200;
-}
-/*woocomerce global*/
-div.woocommerce{
-    @apply cw-xl; 
-}
-.woocommerce a.button{
-    @apply !px-6 !py-4 !rounded;
-}
-th{
-    @apply dark:text-white;
-}
-bdi{ /*woocommerce cart prices*/
-    @apply dark:text-white;
-}
-.product_meta{
-    @apply dark:text-white;
-}
-/*product single*/
-td.value select{
-    @apply border border-gray-500 py-2 px-4 rounded;
-}
-/*cart*/
-.woocommerce table.shop_table{
-    @apply dark:border-gray-500;
-}
-.woocommerce table.shop_table td{
-    @apply dark:border-t-gray-500;
-}
-input#coupon_code{
-    @apply w-auto rounded;
-}
-/*shop page*/
-select.orderby{
-    @apply border border-gray-500 px-4 py-2 rounded;
-}
-
-/*woocommerce account pages*/
-.woocommerce-MyAccount-content form input{
-    @apply py-2 my-4 border-2 border-gray-500 border-solid;
-}
-nav.woocommerce-MyAccount-navigation{
-    @apply border-l-2 border-l-blue-200 border-solid pl-4;
-}
-nav.woocommerce-MyAccount-navigation ul li{
-    @apply mb-2;
-}
-nav.woocommerce-MyAccount-navigation ul li a{
-    @apply hover:text-blue-500;
-}
-input span em{
-    @apply dark:text-gray-300;
-}
-legend{
-    @apply dark:text-gray-300;
 }
 /*end*/
 
