--- a/style.css
+++ b/style.css
@@ -884,6 +884,29 @@ svg.light-svg {
   color: rgb(191 219 254 / var(--tw-text-opacity));
 }
 
+/*video header*/
+
+.div-video video {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.div-video::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: rgb(255 255 255 / 0.9);
+}
+
+.dark .div-video::after {
+  background-color: rgb(0 0 0 / 0.9);
+}
+
 /*end*/
 
 .container {
@@ -932,6 +955,10 @@ svg.light-svg {
   border-width: 0;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -944,8 +971,16 @@ svg.light-svg {
   top: 0px;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .right-0 {
   right: 0px;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .m-0 {
@@ -1049,16 +1084,20 @@ svg.light-svg {
   display: none;
 }
 
-.h-6 {
-  height: 1.5rem;
-}
-
 .h-screen {
   height: 100vh;
 }
 
-.min-h-screen {
-  min-height: 100vh;
+.h-full {
+  height: 100%;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.min-h-full {
+  min-height: 100%;
 }
 
 .w-full {
@@ -1091,6 +1130,10 @@ svg.light-svg {
 
 .w-auto {
   width: auto;
+}
+
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-lg {
@@ -1148,6 +1191,10 @@ svg.light-svg {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .rounded {
@@ -1223,11 +1270,6 @@ svg.light-svg {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
 .bg-transparent {
   background-color: transparent;
 }
@@ -1258,6 +1300,11 @@ svg.light-svg {
 
 .bg-clip-padding {
   background-clip: padding-box;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-20 {
@@ -1304,6 +1351,11 @@ svg.light-svg {
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .pt-8 {
@@ -1527,20 +1579,10 @@ svg.light-svg {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
-.dark .dark\:from-gray-700 {
-  --tw-gradient-from: #374151;
-  --tw-gradient-to: rgb(55 65 81 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 .dark .dark\:from-black {
   --tw-gradient-from: #000;
   --tw-gradient-to: rgb(0 0 0 / 0);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.dark .dark\:to-black {
-  --tw-gradient-to: #000;
 }
 
 .dark .dark\:to-gray-700 {
