--- a/style.css
+++ b/style.css
@@ -904,7 +904,7 @@ svg.light-svg {
 }
 
 .dark .div-video::after {
-  background-color: rgb(0 0 0 / 0.9);
+  background-color: rgb(0 0 0 / 0.8);
 }
 
 /*end*/
@@ -1573,6 +1573,18 @@ svg.light-svg {
 .dark .dark\:bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-black\/80 {
+  background-color: rgb(0 0 0 / 0.8);
+}
+
+.dark .dark\:bg-black\/10 {
+  background-color: rgb(0 0 0 / 0.1);
+}
+
+.dark .dark\:bg-black\/0 {
+  background-color: rgb(0 0 0 / 0);
 }
 
 .dark .dark\:bg-gradient-to-b {
