--- a/style.css
+++ b/style.css
@@ -1060,6 +1060,14 @@ svg.light-svg {
   margin-bottom: 2rem;
 }
 
+.-mt-8 {
+  margin-top: -2rem;
+}
+
+.-mt-20 {
+  margin-top: -5rem;
+}
+
 .block {
   display: block;
 }
